fix issue#48 jumping to the top of the page

--- a/app/assets/stylesheets/font_awesome5.css
+++ b/app/assets/stylesheets/font_awesome5.css
@@ -5,7 +5,3 @@
 .fa5-text {
   padding-left: 5px;
 }
-
-.fontawesome-i2svg-pending body {
-  display: none;
-}
